# hs-apigen

./: .cirrus.yml  .gitignore  .restyled.yaml  BUILD.bazel  README.md  apigen.cabal  stack.yaml
.github/: settings.yml
.github/docker/: Dockerfile
src/Apigen/: Parser.hs  Patterns.hs  Types.hs
src/Apigen/Language/: Apidsl.hs  Haskell.hs  PyDsl.hs
src/Apigen/Parser/: InferClasses.hs  InferGenerated.hs  InferNamespace.hs  InferProperties.hs  InferSections.hs  InferSizedGet.hs  InferSizedParam.hs  Query.hs  SymbolNumbers.hs  SymbolTable.hs
test/Apigen/Language/: HaskellSpec.hs
tools/: BUILD.bazel  apigen.hs  apigen.py  dump-model.hs  gen-python
