load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

haskell_library(
    name = "hs-apigen",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    tags = ["no-cross"],
    version = "0.0.2",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:casing",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:extra",
        "//third_party/haskell:insert-ordered-containers",
        "//third_party/haskell:mtl",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:prettyprinter-ansi-terminal",
        "//third_party/haskell:text",
        "//third_party/haskell:unordered-containers",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-apigen",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:hspec",
        "//third_party/haskell:text",
    ],
)
