load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "apigen",
    srcs = ["apigen.hs"],
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-apigen",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:text",
    ],
)
