load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "apigen",
    srcs = ["apigen.hs"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-apigen",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:text",
    ],
)

haskell_binary(
    name = "dump-model",
    srcs = ["dump-model.hs"],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-apigen",
        "//hs-cimple",
        "//third_party/haskell:aeson",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:text",
    ],
)
